--- a/config/desktop-mac-app-store.json
+++ b/config/desktop-mac-app-store.json
@@ -60,6 +60,7 @@
 		"phone_signup": true,
 		"post-editor/author-selector": true,
 		"post-editor/live-image-updates": true,
+		"post-editor/image-reorientation": false,
 		"press-this": false,
 		"reader": true,
 		"reader/full-errors": false,
