--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "lint": "bin/run-lint"
   },
   "devDependencies": {
+    "@automattic/dops-components": "automattic/dops-components#try/calypso-integration",
     "babel-eslint": "4.1.8",
     "better-assert": "1.0.2",
     "blanket": "1.1.6",
@@ -145,6 +146,7 @@
     "eslint": "1.10.3",
     "eslint-plugin-react": "3.11.3",
     "eslint-plugin-wpcalypso": "1.1.3",
+    "extract-text-webpack-plugin": "1.0.1",
     "glob": "7.0.3",
     "jsdom": "7.2.0",
     "localStorage": "1.0.2",
