--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "better-assert": "1.0.2",
     "blanket": "1.1.6",
     "chai": "2.0.0",
+    "css-loader": "0.23.1",
     "deep-freeze": "0.0.1",
     "enzyme": "2.2.0",
     "esformatter": "0.7.3",
@@ -159,9 +160,11 @@
     "react-addons-test-utils": "0.14.3",
     "react-hot-loader": "1.3.0",
     "rewire": "2.3.3",
+    "sass-loader": "3.2.0",
     "sinon": "1.12.2",
     "sinon-chai": "2.7.0",
     "socket.io": "1.3.7",
+    "style-loader": "0.13.1",
     "supertest": "^1.1.0",
     "webpack-dev-server": "1.11.0"
   }
