reader: use "percentage-regexp" module to check for %
More thorough of a check then previously.

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "node-sass": "3.4.2",
     "page": "1.6.4",
     "path-parser": "1.0.2",
+    "percentage-regex": "3.0.0",
     "phone": "git+https://github.com/Automattic/node-phone.git#1.0.4-11",
     "photon": "2.0.0",
     "postcss-cli": "2.5.1",
