Config: adding 'env_id' parameter
With the new Jetpack Connect signup flow, we are redirecting folks
to the Jetpack site for authorization, the redirecting back into Calypso
to complete the flow. We need an 'env_id' parameter in our config files
so that we know which environment to use when redirecting back into Calypso.
'env_id' corresponds to the name of the given config file.

--- a/config/desktop-mac-app-store.json
+++ b/config/desktop-mac-app-store.json
@@ -1,5 +1,6 @@
 {
 	"env": "production",
+	"env_id": "desktop-mac-app-store",
 	"client_slug": "mac-app-store",
 	"hostname": "127.0.0.1",
 	"i18n_default_locale_slug": "en",
