Components: Install ReactVirtualized dependency

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "1.3.2",
     "creditcards": "1.1.1",
     "debug": "2.2.0",
+    "dom-helpers": "2.4.0",
     "dom-scroll-into-view": "1.0.1",
     "email-validator": "1.0.1",
     "emitter-component": "1.1.1",
@@ -79,6 +80,7 @@
     "react-addons-create-fragment": "0.14.3",
     "react-addons-css-transition-group": "0.14.3",
     "react-addons-linked-state-mixin": "0.14.3",
+    "react-addons-shallow-compare": "0.14.3",
     "react-addons-update": "0.14.3",
     "react-click-outside": "2.1.0",
     "react-day-picker": "1.3.2",
@@ -87,6 +89,7 @@
     "react-pure-render": "1.0.2",
     "react-redux": "4.4.5",
     "react-tap-event-plugin": "0.2.1",
+    "react-virtualized": "7.2.0",
     "redux": "3.0.4",
     "redux-thunk": "1.0.0",
     "rtlcss": "2.0.5",
