--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.17.0",
   "description": "A pure REST-API and JS based version of the WordPress.com admin",
   "private": true,
+  "license": "GPL-2.0+",
   "repository": {
     "type": "git",
     "url": "https://github.com/Automattic/wp-calypso.git"
