--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cookie": "0.1.2",
     "cookie-parser": "1.3.2",
     "creditcards": "1.1.1",
+    "currency-formatter": "1.0.2",
     "debug": "2.2.0",
     "dom-helpers": "2.4.0",
     "dom-scroll-into-view": "1.0.1",
