--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "create-react-class": "15.5.3",
     "creditcards": "2.1.2",
     "cross-env": "4.0.0",
+    "css-loader": "0.27.3",
     "debug": "2.2.0",
     "doctrine": "2.0.0",
     "dom-helpers": "2.4.0",
@@ -74,6 +75,7 @@
     "imports-loader": "0.6.5",
     "inherits": "2.0.1",
     "is-my-json-valid": "2.13.1",
+    "isomorphic-style-loader": "1.1.0",
     "jade": "pugjs/jade#29784fd",
     "jquery": "1.11.3",
     "js-sha1": "0.4.1",
@@ -120,6 +122,7 @@
     "redux-thunk": "1.0.0",
     "rtlcss": "2.0.5",
     "sanitize-html": "1.11.1",
+    "sass-loader": "4.1.1",
     "semver": "5.1.0",
     "social-logos": "1.0.1",
     "socket.io-client": "1.4.5",
