--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     "nock": "8.0.0",
     "nodemon": "1.4.1",
     "react-addons-test-utils": "15.4.0",
+    "react-codemod": "github:reactjs/react-codemod",
     "react-hot-loader": "1.3.0",
     "react-test-env": "0.2.0",
     "readline-sync": "1.4.5",
