--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "copy-webpack-plugin": "3.0.1",
     "creditcards": "2.1.2",
     "debug": "2.2.0",
+    "diff": "1.4.0",
     "doctrine": "2.0.0",
     "dom-helpers": "2.4.0",
     "dom-scroll-into-view": "1.0.1",
