--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cookie": "0.1.2",
     "cookie-parser": "1.3.2",
     "copy-webpack-plugin": "3.0.1",
+    "create-react-class": "15.5.3",
     "creditcards": "2.1.2",
     "debug": "2.2.0",
     "doctrine": "2.0.0",
