--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "morgan": "1.2.0",
     "ms": "0.7.1",
     "node-sass": "3.7.0",
-    "notifications-panel": "1.1.9",
+    "notifications-panel": "Automattic/notifications-panel#fix\/keypress",
     "numeral": "2.0.4",
     "page": "1.6.4",
     "percentage-regex": "3.0.0",
