--- a/circle.yml
+++ b/circle.yml
@@ -32,6 +32,8 @@ test:
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/ && find . -type f -regex  "./test-results.*\.xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;:
         parallel: true
+    - >
+      if [[ "$RUN_ARGS" == "--nightly" ]]; then npm run test-integration; fi
 notify:
   webhooks:
     - url: https://translate.wordpress.com/api/localci/-relay-new-strings-to-gh
