--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "creditcards": "2.1.2",
     "cross-env": "4.0.0",
     "debug": "2.2.0",
+    "diff": "1.4.0",
     "doctrine": "2.0.0",
     "dom-helpers": "2.4.0",
     "dom-scroll-into-view": "1.0.1",
