--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,8 @@ test:
           fi
       : parallel: true
   override:
+    - bin/run-integration :
+        parallel: true
     - make config-defaults-lint
     - bin/run-lint :
         parallel: true
@@ -32,8 +34,6 @@ test:
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/ && find . -type f -regex  "./test-results.*\.xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;:
         parallel: true
-    - >
-      if [[ "$RUN_ARGS" == "--nightly" ]]; then npm run test-integration; fi
 notify:
   webhooks:
     - url: https://translate.wordpress.com/api/localci/-relay-new-strings-to-gh
