Tests: Try using Jest for server tests

--- a/package.json
+++ b/package.json
@@ -203,7 +203,7 @@
     "test-client:watch": "nodemon -e js,jsx --exec npm run -s test-client",
     "test-integration": "cross-env NODE_ENV=test NODE_PATH=test:integration:client TEST_ROOT=integration test/runner.js",
     "test-integration:watch": "nodemon -e js,jsx --exec npm run -s test-integration",
-    "test-server": "cross-env NODE_ENV=test NODE_PATH=test:server:client TEST_ROOT=server node test/runner.js",
+    "test-server": "cross-env NODE_ENV=test NODE_PATH=test:server:client jest --projects server",
     "test-server:watch": "nodemon -e js,jsx --exec npm run -s test-server",
     "test-test": "cross-env NODE_ENV=test NODE_PATH=test:client TEST_ROOT=test node test/runner.js",
     "test-test:watch": "nodemon -e js,jsx --exec npm run -s test-test",
@@ -232,6 +232,7 @@
     "eslint-plugin-wpcalypso": "3.3.0",
     "glob": "7.0.3",
     "husky": "0.13.3",
+    "jest": "20.0.3",
     "jscodeshift": "0.3.30",
     "md5-file": "3.1.0",
     "mixedindentlint": "1.2.0",
