--- a/package.json
+++ b/package.json
@@ -204,7 +204,7 @@
     "test-integration": "cross-env NODE_ENV=test NODE_PATH=test:integration:client TEST_ROOT=integration test/runner.js",
     "test-integration:watch": "nodemon -e js,jsx --exec npm run -s test-integration",
     "test-server": "cross-env NODE_ENV=test NODE_PATH=test:server:client jest --projects server",
-    "test-server:watch": "nodemon -e js,jsx --exec npm run -s test-server",
+    "test-server:watch": "npm run -s test-server -- --watch",
     "test-test": "cross-env NODE_ENV=test NODE_PATH=test:client TEST_ROOT=test node test/runner.js",
     "test-test:watch": "nodemon -e js,jsx --exec npm run -s test-test",
     "translate": "i18n-calypso --format pot --output-file ./calypso-strings.pot -e date \"**/*.js\" \"**/*.jsx\" \"!build/**\" \"!node_modules/**\" \"!public/**\" \"!client/extensions/**\"",
