Tests: Fix NODE_PATH usage in server tests

--- a/package.json
+++ b/package.json
@@ -203,7 +203,7 @@
     "test-client:watch": "nodemon -e js,jsx --exec npm run -s test-client",
     "test-integration": "cross-env NODE_ENV=test NODE_PATH=test:integration:client TEST_ROOT=integration test/runner.js",
     "test-integration:watch": "nodemon -e js,jsx --exec npm run -s test-integration",
-    "test-server": "cross-env NODE_ENV=test NODE_PATH=test:server:client jest --projects server",
+    "test-server": "cross-env NODE_ENV=test jest --projects server",
     "test-server:watch": "npm run -s test-server -- --watch",
     "test-test": "cross-env NODE_ENV=test NODE_PATH=test:client TEST_ROOT=test node test/runner.js",
     "test-test:watch": "nodemon -e js,jsx --exec npm run -s test-test",
