--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bounding-client-rect": "1.0.5",
     "browser-filesaver": "1.1.0",
     "chalk": "1.0.0",
-    "chrono-node": "^1.0.6",
+    "chrono-node": "1.3.1",
     "classnames": "1.1.1",
     "click-outside": "2.0.1",
     "clipboard": "1.5.3",
