Framework: pin versions to avoid unexpected version bumps

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "babel-preset-stage-2": "6.5.0",
     "babel-register": "6.9.0",
     "blob": "0.0.4",
-    "body-parser": "^1.13.3",
+    "body-parser": "1.17.2",
     "bounding-client-rect": "1.0.5",
     "browser-filesaver": "1.1.0",
     "chalk": "1.0.0",
@@ -93,7 +93,7 @@
     "phone": "git+https://github.com/Automattic/node-phone.git#1.0.8",
     "photon": "2.0.0",
     "postcss-cli": "2.5.1",
-    "prismjs": "^1.6.0",
+    "prismjs": "1.6.0",
     "q": "1.0.1",
     "qrcode.react": "0.6.1",
     "qs": "4.0.0",
@@ -195,7 +195,7 @@
     "sinon": "1.17.7",
     "sinon-chai": "2.8.0",
     "socket.io": "1.4.5",
-    "stylelint": "^6.5.1",
+    "stylelint": "6.9.0",
     "supertest": "2.0.0",
     "webpack-bundle-analyzer": "2.2.1",
     "webpack-dashboard": "0.2.0",
