--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bounding-client-rect": "1.0.5",
     "browser-filesaver": "1.1.0",
     "chalk": "1.0.0",
+    "check-node-version": "2.1.0",
     "chrono-node": "1.3.1",
     "classnames": "1.1.1",
     "click-outside": "2.0.1",
@@ -45,6 +46,7 @@
     "copy-webpack-plugin": "3.0.1",
     "create-react-class": "15.5.3",
     "creditcards": "2.1.2",
+    "cross-env": "4.0.0",
     "debug": "2.2.0",
     "doctrine": "2.0.0",
     "dom-helpers": "2.4.0",
@@ -62,11 +64,12 @@
     "flux": "2.1.1",
     "fuse.js": "2.6.1",
     "get-video-id": "2.1.4",
+    "globby": "6.1.0",
     "gridicons": "1.0.0",
     "hard-source-webpack-plugin": "0.0.42",
     "he": "0.5.0",
     "html-loader": "0.4.0",
-    "i18n-calypso": "1.7.1",
+    "i18n-calypso": "1.7.3",
     "immutable": "3.7.6",
     "imports-loader": "0.6.5",
     "inherits": "2.0.1",
@@ -82,10 +85,12 @@
     "lru": "3.1.0",
     "lunr": "0.5.7",
     "marked": "0.3.5",
+    "mkdirp": "0.5.1",
     "moment": "2.10.6",
     "morgan": "1.2.0",
     "ms": "0.7.1",
     "node-sass": "3.7.0",
+    "npm-run-all": "4.0.2",
     "notifications-panel": "1.1.12",
     "numeral": "2.0.4",
     "page": "1.6.4",
@@ -145,21 +150,70 @@
     "npm": "3.10.10"
   },
   "scripts": {
-    "test": "npm run test-client && npm run test-server && npm run test-test",
-    "test-client": "NODE_ENV=test NODE_PATH=test:client TEST_ROOT=client test/runner.js",
-    "test-server": "NODE_ENV=test NODE_PATH=test:server:client TEST_ROOT=server test/runner.js",
-    "test-test": "NODE_ENV=test NODE_PATH=test:client TEST_ROOT=test test/runner.js",
-    "test-integration": "NODE_ENV=test NODE_PATH=test:integration:client TEST_ROOT=integration test/runner.js",
-    "test-client:watch": "nodemon -e js,jsx --exec npm run test-client",
-    "test-server:watch": "nodemon -e js,jsx --exec npm run test-server",
-    "test-test:watch": "nodemon -e js,jsx --exec npm run test-test",
-    "test-integration:watch": "nodemon -e js,jsx --exec npm run test-integration",
-    "lint": "bin/run-lint .",
-    "css-lint": "stylelint 'client/**/*.scss' --syntax scss"
+    "preanalyze-bundles": "cross-env WEBPACK_OUTPUT_JSON=1 CALYPSO_ENV=production npm run -s build",
+    "analyze-bundles": "webpack-bundle-analyzer stats.json public -p 9898",
+    "autoprefixer": "postcss -r --use autoprefixer --autoprefixer.browsers \"last 2 versions, > 1%, Safari >= 8, iOS >= 8, Firefox ESR, Opera 12.1\"",
+    "prebuild": "npm run -s install-if-needed",
+    "build": "run-p -s build-devdocs:* build-server build-css",
+    "postbuild": "npm run -s bundle",
+    "build-css": "run-p -s build-css:*",
+    "build-css:debug": "node-sass --include-path client --source-map \"public/style-debug.css.map\" assets/stylesheets/style.scss public/style-debug.css && npm run -s autoprefixer -- public/style-debug.css",
+    "build-css:directly": "node-sass --include-path client assets/stylesheets/directly.scss public/directly.css && npm run -s autoprefixer -- public/directly.css",
+    "build-css:editor": "node-sass --include-path client assets/stylesheets/editor.scss public/editor.css && npm run -s autoprefixer -- public/editor.css",
+    "build-css:style": "node-sass --include-path client assets/stylesheets/style.scss public/style.css && npm run -s autoprefixer -- public/style.css && rtlcss public/style.css public/style-rtl.css",
+    "prebuild-desktop": "npm run -s install-if-needed",
+    "build-desktop": "run-p -s build-server build-css",
+    "postbuild-desktop": "npm run -s bundle",
+    "build-devdocs:components-usage-stats": "npm run -s env -- npm run -s build-devdocs:components-usage-stats:_env",
+    "build-devdocs:components-usage-stats:_env": "node server/devdocs/bin/generate-components-usage-stats.js \"client/**/*.js\" \"client/**/*.jsx\" \"!**/docs/**\" \"!**/test/**\" \"!**/docs-example/**\"",
+    "build-devdocs:index": "npm run -s env -- npm run -s build-devdocs:index:_env",
+    "build-devdocs:index:_env": "node server/devdocs/bin/generate-devdocs-index \"**/*.md\" \".github/**.md\" \"!build/**\" \"!node_modules/**\" \"!public/**\"",
+    "build-devdocs:proptypes-index": "npm run -s env -- npm run -s build-devdocs:proptypes-index:_env",
+    "build-devdocs:proptypes-index:_env": "node server/devdocs/bin/generate-proptypes-index.js \"client/**/index.js\" \"client/**/index.jsx\" \"client/**/example.jsx\" \"!**/test/**\"",
+    "build-docker": "docker build -t wp-calypso .",
+    "prebuild-server": "mkdirp build",
+    "build-server": "npm run -s env -- webpack --display-error-details --config webpack.config.node.js",
+    "bundle": "npm run -s env -- node server/bundler/bin/bundler.js",
+    "clean": "run-p -s clean:*",
+    "clean:build": "npm run -s rm -- build && npm run -s rm -- server/bundler .json && npm run -s rm -- .babel-cache",
+    "clean:devdocs": "npm run -s rm -- server/devdocs/search-index.js && npm run -s rm -- server/devdocs/proptypes-index.json && npm run -s rm -- server/devdocs/components-usage-stats.json",
+    "clean:public": "npm run -s rm -- public .css .css.map .js .js.map",
+    "dashboard": "webpack-dashboard -- npm start",
+    "distclean": "npm run -s clean && npm run -s rm -- node_modules",
+    "docker": "docker run -it --name wp-calypso --rm -p 80:3000 -e NODE_ENV='wpcalypso' -e CALYPSO_ENV='wpcalypso' wp-calypso",
+    "env": "cross-env NODE_PATH=$NODE_PATH:server:client:.",
+    "eslint-branch": "node bin/eslint-branch.js",
+    "install-if-needed": "node bin/install-if-needed.js",
+    "lint": "run-s -s lint:*",
+    "lint:config-defaults": "node server/config/validate-config-keys.js",
+    "lint:css": "stylelint \"client/**/*.scss\" --syntax scss",
+    "lint:js": "node bin/run-lint .",
+    "lint:mixedindent": "mixedindentlint --ignore-comments \"client/**/*.scss\" \"assets/**/*.scss\" \"**/*.js\" \"**/*.jsx\" \"!build/**\" \"!node_modules/**\" \"!public/**\" \"!client/config/index.js\"",
+    "precommit": "npm run -s install-if-needed && node bin/pre-commit-hook.js",
+    "prepush": "npm run -s install-if-needed && node bin/pre-push-hook.js",
+    "rm": "node bin/rm.js",
+    "preshrinkwrap": "npm prune",
+    "postshrinkwrap": "node bin/trim-shrinkwrap.js && touch node_modules",
+    "prestart": "npm run -s install-if-needed && ( check-node-version --package || exit 0 )",
+    "start": "npm run -s build",
+    "poststart": "npm run -s env -- node build/bundle.js",
+    "pretest": "npm run -s install-if-needed",
+    "test": "run-s -s test-client test-server test-test",
+    "test-client": "cross-env NODE_ENV=test NODE_PATH=test:client TEST_ROOT=client node test/runner.js",
+    "test-client:watch": "nodemon -e js,jsx --exec npm run -s test-client",
+    "test-integration": "cross-env NODE_ENV=test NODE_PATH=test:integration:client TEST_ROOT=integration test/runner.js",
+    "test-integration:watch": "nodemon -e js,jsx --exec npm run -s test-integration",
+    "test-server": "cross-env NODE_ENV=test NODE_PATH=test:server:client TEST_ROOT=server node test/runner.js",
+    "test-server:watch": "nodemon -e js,jsx --exec npm run -s test-server",
+    "test-test": "cross-env NODE_ENV=test NODE_PATH=test:client TEST_ROOT=test node test/runner.js",
+    "test-test:watch": "nodemon -e js,jsx --exec npm run -s test-test",
+    "translate": "i18n-calypso --format pot --output-file ./calypso-strings.pot -e date \"**/*.js\" \"**/*.jsx\" \"!build/**\" \"!node_modules/**\" \"!public/**\" \"!client/extensions/**\"",
+    "update-deps": "npm run -s rm -- node_modules && npm run -s rm -- npm-shrinkwrap.json && npm install && npm install && npm shrinkwrap --dev"
   },
   "devDependencies": {
     "5to6-codemod": "git://github.com/jsnmoon/5to6-codemod#v1.8.0",
     "babel-eslint": "6.1.2",
+    "cash-touch": "0.2.0",
     "chai": "3.5.0",
     "chai-enzyme": "0.5.2",
     "deep-freeze": "0.0.1",
@@ -177,10 +231,11 @@
     "eslint-plugin-react": "6.4.1",
     "eslint-plugin-wpcalypso": "3.2.0",
     "glob": "7.0.3",
+    "husky": "0.13.3",
     "jscodeshift": "0.3.30",
     "lodash-deep": "1.5.3",
     "md5-file": "3.1.0",
-    "mixedindentlint": "1.1.1",
+    "mixedindentlint": "1.2.0",
     "mocha": "3.1.0",
     "mocha-junit-reporter": "1.12.0",
     "mockery": "1.7.0",
