Use original 5to6-codemod project as dependency
All downstream changes necessary for Calypso has been migrated upstream onto 5to6/5to6-codemod repository.

--- a/package.json
+++ b/package.json
@@ -211,7 +211,7 @@
     "update-deps": "npm run -s rm -- node_modules && npm run -s rm -- npm-shrinkwrap.json && npm install && npm install && npm shrinkwrap --dev"
   },
   "devDependencies": {
-    "5to6-codemod": "git://github.com/jsnmoon/5to6-codemod#v1.8.0",
+    "5to6-codemod": "5to6/5to6-codemod#v1.7.0",
     "babel-eslint": "6.1.2",
     "cash-touch": "0.2.0",
     "chai": "3.5.0",
