Tests: Add junit reporter for Circle CI server tests

--- a/package.json
+++ b/package.json
@@ -204,7 +204,7 @@
     "test-integration": "cross-env NODE_ENV=test NODE_PATH=test:integration:client TEST_ROOT=integration test/runner.js",
     "test-integration:watch": "nodemon -e js,jsx --exec npm run -s test-integration",
     "test-server": "cross-env NODE_ENV=test jest --projects server",
-    "test-server:ci": "cross-env NODE_ENV=test MOCHA_FILE=./test-results-server.xml jest --config=server --maxWorkers=2",
+    "test-server:ci": "cross-env NODE_ENV=test TEST_REPORT_FILENAME=./test-results-server.xml jest --config=server/jest.config.ci.js --maxWorkers=2",
     "test-server:watch": "npm run -s test-server -- --watchAll",
     "test-test": "cross-env NODE_ENV=test NODE_PATH=test:client TEST_ROOT=test node test/runner.js",
     "test-test:watch": "nodemon -e js,jsx --exec npm run -s test-test",
@@ -235,6 +235,7 @@
     "glob": "7.0.3",
     "husky": "0.13.3",
     "jest": "20.0.3",
+	"jest-junit-reporter": "1.1.0",
     "jscodeshift": "0.3.30",
     "md5-file": "3.1.0",
     "mixedindentlint": "1.2.0",
