--- a/package.json
+++ b/package.json
@@ -200,13 +200,13 @@
     "poststart": "npm run -s env -- node build/bundle.js",
     "pretest": "npm run -s install-if-needed",
     "test": "run-s -s test-client test-server test-test",
-    "test-client": "cross-env NODE_ENV=test NODE_PATH=test:client TEST_ROOT=client node test/runner.js",
+    "test-client": "cross-env NODE_ENV=test NODE_PATH=test:client:client/extensions TEST_ROOT=client node test/runner.js",
     "test-client:watch": "nodemon -e js,jsx --exec npm run -s test-client",
-    "test-integration": "cross-env NODE_ENV=test NODE_PATH=test:integration:client TEST_ROOT=integration test/runner.js",
+    "test-integration": "cross-env NODE_ENV=test NODE_PATH=test:integration:client:client/extensions TEST_ROOT=integration test/runner.js",
     "test-integration:watch": "nodemon -e js,jsx --exec npm run -s test-integration",
-    "test-server": "cross-env NODE_ENV=test NODE_PATH=test:server:client TEST_ROOT=server node test/runner.js",
+    "test-server": "cross-env NODE_ENV=test NODE_PATH=test:server:client:client/extensions TEST_ROOT=server node test/runner.js",
     "test-server:watch": "nodemon -e js,jsx --exec npm run -s test-server",
-    "test-test": "cross-env NODE_ENV=test NODE_PATH=test:client TEST_ROOT=test node test/runner.js",
+    "test-test": "cross-env NODE_ENV=test NODE_PATH=test:client:client/extensions TEST_ROOT=test node test/runner.js",
     "test-test:watch": "nodemon -e js,jsx --exec npm run -s test-test",
     "translate": "i18n-calypso --format pot --output-file ./calypso-strings.pot -e date \"**/*.js\" \"**/*.jsx\" \"!build/**\" \"!node_modules/**\" \"!public/**\" \"!client/extensions/**\"",
     "update-deps": "npm run -s rm -- node_modules && npm run -s rm -- npm-shrinkwrap.json && npm install && npm install && npm shrinkwrap --dev"
