--- a/circle.yml
+++ b/circle.yml
@@ -27,6 +27,11 @@ test:
           - server/**/*.jsx
     - MOCHA_FILE=./test-results-client.xml npm run test-client -- -R mocha-junit-reporter -t $CIRCLE_NODE_TOTAL -i $CIRCLE_NODE_INDEX:
         parallel: true
+    - npm run test-client:ci:
+        parallel: true
+        files:
+          - client/**/test/*.js
+          - client/**/test/*.jsx
     - npm run test-server:ci:
         parallel: true
         files:
