Tests: Remove nock usage from Jest to avoid memory leaks

--- a/package.json
+++ b/package.json
@@ -200,8 +200,8 @@
     "pretest": "npm run -s install-if-needed",
     "test": "run-s -s test-client test-server test-test",
     "test-client": "cross-env NODE_ENV=test NODE_PATH=test:client:client/extensions TEST_ROOT=client node test/runner.js",
-    "test-client:ci": "cross-env NODE_ENV=test TEST_REPORT_FILENAME=./test-results-client-jest.xml jest --config=client/jest.config.ci.js --maxWorkers=2",
-    "test-client:jest": "cross-env NODE_ENV=test jest --projects client",
+    "test-client:ci": "cross-env TEST_REPORT_FILENAME=./test-results-client-jest.xml jest -c=client/jest.config.ci.js -w=2",
+    "test-client:jest": "jest --projects client",
     "test-client:watch": "nodemon -e js,jsx --exec npm run -s test-client",
     "test-integration": "cross-env NODE_ENV=test NODE_PATH=test:integration:client TEST_ROOT=integration test/runner.js",
     "test-integration:watch": "nodemon -e js,jsx --exec npm run -s test-integration",
