--- a/package.json
+++ b/package.json
@@ -171,15 +171,16 @@
     "build-devdocs:index:_env": "node server/devdocs/bin/generate-devdocs-index \"**/*.md\" \".github/**.md\" \"!build/**\" \"!node_modules/**\" \"!public/**\"",
     "build-devdocs:proptypes-index": "npm run -s env -- npm run -s build-devdocs:proptypes-index:_env",
     "build-devdocs:proptypes-index:_env": "node server/devdocs/bin/generate-proptypes-index.js \"client/**/index.js\" \"client/**/index.jsx\" \"client/**/example.jsx\" \"!**/test/**\"",
-    "prebuild-docker": "touch env-config.sh",
+    "prebuild-docker": "npm run -s distclean && ( touch env-config.sh || type nul >> env-config.sh )",
     "build-docker": "docker build -t wp-calypso .",
     "prebuild-server": "mkdirp build",
     "build-server": "npm run -s env -- webpack --display-error-details --config webpack.config.node.js",
     "bundle": "npm run -s env -- node server/bundler/bin/bundler.js",
-    "clean": "run-p -s clean:*",
+    "clean": "npm run -s clean:build && npm run -s clean:devdocs && npm run -s clean:public",
     "clean:build": "npm run -s rm -- build && npm run -s rm -- server/bundler .json && npm run -s rm -- .babel-cache",
     "clean:devdocs": "npm run -s rm -- server/devdocs/search-index.js && npm run -s rm -- server/devdocs/proptypes-index.json && npm run -s rm -- server/devdocs/components-usage-stats.json",
     "clean:public": "npm run -s rm -- public .css .css.map .js .js.map",
+    "predashboard": "npm run -s install-if-needed",
     "dashboard": "webpack-dashboard -- npm start",
     "distclean": "npm run -s clean && npm run -s rm -- node_modules",
     "docker": "docker run -it --name wp-calypso --rm -p 80:3000 -e NODE_ENV=wpcalypso -e CALYPSO_ENV=wpcalypso wp-calypso",
@@ -196,7 +197,7 @@
     "rm": "node bin/rm.js",
     "preshrinkwrap": "npm prune",
     "postshrinkwrap": "node bin/trim-shrinkwrap.js && touch node_modules",
-    "prestart": "npm run -s install-if-needed && ( check-node-version --package || exit 0 )",
+    "prestart": "npm run -s install-if-needed && node bin/welcome.js && ( check-node-version --package || exit 0 )",
     "start": "npm run -s build",
     "poststart": "npm run -s env -- node build/bundle.js",
     "pretest": "npm run -s install-if-needed",
