Add routing and tabbed navigation

--- a/client/extensions/wp-job-manager/package.json
+++ b/client/extensions/wp-job-manager/package.json
@@ -7,6 +7,7 @@
 	"section": {
 		"name": "wp-job-manager",
 		"paths": [ "/extensions/wp-job-manager" ],
+		"settings_path": "/extensions/wp-job-manager",
 		"module": "wp-job-manager",
 		"group": "sites",
 		"secondary": true
