Add payment authorization field to PayPal

--- a/client/extensions/woocommerce/lib/get-payment-method-details/details-mappings.json
+++ b/client/extensions/woocommerce/lib/get-payment-method-details/details-mappings.json
@@ -11,7 +11,8 @@
 	"paypal": {
 		"fees": "2.9% + 30c per transaction",
 		"fields": [
-			"email"
+			"email",
+			"paymentaction"
 		],
 		"informationUrl": "https://docs.woocommerce.com/document/paypal-standard/",
 		"isSuggested": true,
