Sites Management: Abstract site list processing in a single component (#68175)

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -37,6 +37,7 @@
 		{ "path": "./photon" },
 		{ "path": "./plans-grid" },
 		{ "path": "./search" },
+		{ "path": "./sites" },
 		{ "path": "./shopping-cart" },
 		{ "path": "./state-utils" },
 		{ "path": "./tree-select" },
