CI: upgrade docker image from `buster` to `bullseye-slim`. (#67930)
* Try bullseye-slim, disable nvm

* .teamcity/_self/bashNodeScript.kt
- remove all NVM related calls.

Dockerfile.base
- clean up all NVM related calls.

* Dockerfile.base
- additional cleanup calls in ci-e2e and base steps

* Dockerfile.base
- fix syntax error

* Dockerfile.base
- do not install recommends
- install xauth

* Dockerfile.base
- add git to the initial list of packages to install for base

* Dockerfile
- update the build-cache-false base image to `bullseye-slim`.

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -2,7 +2,7 @@
 #### This image is not pushed to any repository and it shouldn't be used as base image for any other docker build.
 #### Its main goal is to create a `/calypso/.cache` that can be copied over other images that can benefit from a warm cache.
 #### Note that yarn v3 cache lives in `/calypso/.yarn`
-FROM node:16.17.0-buster as cache
+FROM node:16.17.0-bullseye-slim as cache
 
 ARG node_memory=8192
 WORKDIR /calypso
@@ -11,25 +11,14 @@ ENV PERSISTENT_CACHE=true
 ENV READONLY_CACHE=false
 ENV PROFILE=true
 ENV SKIP_TSC=true
-ENV NVM_DIR=/calypso/.nvm
 ENV CALYPSO_ENV=production
 ENV BUILD_TRANSLATION_CHUNKS=true
 ENV NODE_OPTIONS=--max-old-space-size=$node_memory
 ENV HOME=/calypso
 
-RUN git clone --branch v0.37.0 --depth 1 https://github.com/nvm-sh/nvm.git "$NVM_DIR" \
-	&& echo ". ${NVM_DIR}/nvm.sh" >> "${HOME}/.bashrc"
-
 COPY . .
 
-# Run nvm.sh in a different dir so it doesn't try to use the version specified in /calypso/.nvmrc.
-# If not, it will fail the image generation.
-RUN cd / \
-	&& . "$NVM_DIR/nvm.sh" \
-	&& cd $HOME \
-	&& nvm install \
-	# Prime yarn cache
-	&& yarn \
+RUN yarn \
 	# Prime webpack caches, including sourcemaps.
 	&& NODE_ENV=production SOURCEMAP=hidden-source-map yarn build-client
 
@@ -37,7 +26,7 @@ ENTRYPOINT [ "/bin/bash" ]
 
 #### base image
 #### This image can be used as a base image for other builds, or to uni test and build calypso.
-FROM node:16.17.0-buster as base
+FROM node:16.17.0-bullseye-slim as base
 
 ARG node_memory=8192
 ARG user=calypso
@@ -45,7 +34,6 @@ ARG UID=1003
 
 WORKDIR /calypso
 ENV NPM_CONFIG_CACHE=/calypso/.cache
-ENV NVM_DIR=/calypso/.nvm
 ENV NODE_OPTIONS=--max-old-space-size=$node_memory
 ENV HOME=/calypso
 ENV SKIP_TSC=true
@@ -54,20 +42,19 @@ ENV PLAYWRIGHT_SKIP_DOWNLOAD=true
 
 # Add user calypso with uid 1003, give it sudo permissions
 RUN apt-get update \
-	&& apt-get install -y sudo zip jq \
+	&& apt-get install -y sudo zip jq curl git \
 	&& adduser --uid $UID --disabled-password $user \
 	&& echo "$user ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/$user \
 	&& chmod 0440 /etc/sudoers.d/$user \
 	&& chown $UID /calypso \
-	&& rm -rf /var/lib/apt/lists/*
+	&& rm -rf /var/lib/apt/lists/* \
+	&& apt autoremove --purge \
+	&& apt autoclean
 
 # Set bash as the default shell
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh
-# Copy nvm cache so we don't need to download it again
-COPY --from=cache --chown=$UID /calypso/.nvm /calypso/.nvm
 # Copy all other caches (webpack, babel, yarn...)
 COPY --from=cache --chown=$UID /calypso/.cache /calypso/.cache
-COPY --from=cache --chown=$UID /calypso/.bashrc /calypso/.bashrc
 COPY --from=cache --chown=$UID /calypso/.yarn /calypso/.yarn
 
 ENTRYPOINT [ "/bin/bash" ]
@@ -81,7 +68,7 @@ ENV PLAYWRIGHT_SKIP_DOWNLOAD=false
 ENV DISPLAY=:99
 
 RUN apt update \
-	&& apt-get install -y \
+	&& apt install -y --no-install-recommends \
 		fonts-liberation \
 		fonts-noto \
 		git-restore-mtime \
@@ -99,13 +86,18 @@ RUN apt update \
 		libx11-xcb1 \
 		libxss1 \
 		libxtst6 \
+		openssl \
+		xauth \
 		xdg-utils \
 		xfonts-100dpi \
 		xfonts-75dpi \
 		xfonts-base \
 		xfonts-cyrillic \
 		xfonts-scalable \
-		xvfb
+		xvfb \
+	&& apt autoremove --purge \
+	&& apt autoclean \
+	&& rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT [ "/bin/bash" ]
 
@@ -116,13 +108,17 @@ FROM base as ci-wpcom
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 COPY --from=cache --chown=$UID /calypso/composer.* /calypso/
 
-RUN apt update &&\
-	apt-get install -y apt-transport-https &&\
-	wget https://packages.sury.org/php/apt.gpg -O /etc/apt/trusted.gpg.d/php-sury.gpg &&\
-	echo "deb https://packages.sury.org/php/ buster main" > /etc/apt/sources.list.d/php-sury.list &&\
-	apt update &&\
- 	apt-get upgrade -y &&\
-	apt-get install -y php7.4-cli php7.4-xml php7.4-mbstring docker-compose &&\
+RUN apt update && \
+	apt install -y apt-transport-https wget
+
+# libffi6 is no longer available from apt as of bullseye.
+RUN wget http://mirrors.kernel.org/ubuntu/pool/main/libf/libffi/libffi6_3.2.1-8_amd64.deb && \
+	dpkg -i libffi6_3.2.1-8_amd64.deb && \
+	wget https://packages.sury.org/php/apt.gpg -O /etc/apt/trusted.gpg.d/php-sury.gpg && \
+	echo "deb https://packages.sury.org/php/ buster main" > /etc/apt/sources.list.d/php-sury.list && \
+	apt update && \
+ 	apt upgrade -y && \
+	apt install -y php7.4-cli php7.4-xml php7.4-mbstring docker-compose && \
 	composer install
 
 # Install sentry-cli.
