--- a/apps/o2-blocks/package.json
+++ b/apps/o2-blocks/package.json
@@ -47,6 +47,7 @@
 	"devDependencies": {
 		"@automattic/calypso-apps-builder": "workspace:^",
 		"@automattic/calypso-eslint-overrides": "workspace:^",
+		"@wordpress/readable-js-assets-webpack-plugin": "^1.0.4",
 		"enzyme": "^3.11.0",
 		"jest": "^27.3.1",
 		"postcss": "^8.4.5",
