--- a/apps/happychat/package.json
+++ b/apps/happychat/package.json
@@ -47,6 +47,7 @@
 		"@automattic/webpack-extensive-lodash-replacement-plugin": "workspace:^",
 		"@automattic/webpack-inline-constant-exports-plugin": "workspace:^",
 		"autoprefixer": "^10.2.5",
+		"copy-webpack-plugin": "^10.1.0",
 		"enzyme": "^3.11.0",
 		"html-webpack-plugin": "^5.0.0-beta.4",
 		"jest": "^27.2.4",
