--- a/packages/help-center/package.json
+++ b/packages/help-center/package.json
@@ -10,13 +10,12 @@
 	"calypso:src": "src/index.ts",
 	"sideEffects": [
 		"*.css",
-		"*.scss",
-		"src/directly/*"
+		"*.scss"
 	],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/Automattic/wp-calypso.git",
-		"directory": "packages/tour-kit"
+		"directory": "packages/help-center"
 	},
 	"publishConfig": {
 		"access": "public"
