--- a/package.json
+++ b/package.json
@@ -220,6 +220,7 @@
 		"@signal-noise/stylelint-scales": "^2.0.3",
 		"@testing-library/jest-dom": "^5.16.2",
 		"@types/gtag.js": "^0.0.10",
+		"@types/superagent": "^4.1.15",
 		"@typescript-eslint/eslint-plugin": "^5.7.0",
 		"@typescript-eslint/parser": "^5.7.0",
 		"@wordpress/eslint-plugin": "^12.3.0",
