--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,6 +4,8 @@
 	"reportInvalidScopeDisables": true,
 	"reportNeedlessDisables": true,
 	"rules": {
+		"declaration-block-no-duplicate-properties": [ true, { "severity": "warning" } ],
+		"color-named": [ "never", { "severity": "warning" } ],
 		"at-rule-empty-line-before": null,
 		"at-rule-no-unknown": null,
 		"comment-empty-line-before": null,
