Add Autobots as code owners for the plans pages

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -149,3 +149,13 @@
 /packages/wpcom.js/src/lib/domain.email.js @Automattic/nomado
 /packages/wpcom.js/src/lib/domain.js @Automattic/nomado
 /packages/wpcom.js/src/lib/domains.js @Automattic/nomado
+
+#Plans
+/client/signup/steps/plans @Automattic/martech-autobots
+/client/lib/plans @Automattic/martech-autobots
+/client/my-sites/plan-features-comparison @Automattic/martech-autobots
+/client/my-sites/plan-features @Automattic/martech-autobots
+/client/my-sites/plans-comparison @Automattic/martech-autobots
+/client/my-sites/plans-features-main @Automattic/martech-autobots
+/client/my-sites/plan-price @Automattic/martech-autobots
+/packages/calypso-products/src/plans-list.tsx @Automattic/martech-autobots
