--- a/package.json
+++ b/package.json
@@ -296,7 +296,10 @@
 		"@automattic/newspack-blocks/prettier": "npm:wp-prettier@2.6.2-beta-1",
 		"@types/react": "^17.0.39",
 		"keytar@npm:7.7.0/node-addon-api": "3.1.0",
-		"lzma-native": "^8.0.5"
+		"lzma-native": "^8.0.5",
+		"decimal.js": "^10.4.2",
+		"node-gyp-build": "^4.5.0",
+		"psl": "^1.9.0"
 	},
 	"packageManager": "yarn@3.2.3",
 	"dependenciesMeta": {
