--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -70,7 +70,8 @@ ENV DISPLAY=:99
 RUN apt update \
 	&& apt install -y --no-install-recommends \
 		fonts-liberation \
-		fonts-noto \
+		# fonts-noto \
+		fonts-noto-cjk \
 		git-restore-mtime \
 		gtk2-engines-pixbuf \
 		libappindicator3-1 \
@@ -88,12 +89,13 @@ RUN apt update \
 		libxtst6 \
 		openssl \
 		xauth \
-		xdg-utils \
-		xfonts-100dpi \
-		xfonts-75dpi \
-		xfonts-base \
-		xfonts-cyrillic \
-		xfonts-scalable \
+		# xdg-utils \
+		# xfonts-intl-arabic \
+		# xfonts-100dpi \
+		# xfonts-75dpi \
+		# xfonts-base \
+		# xfonts-cyrillic \
+		# xfonts-scalable \
 		xvfb \
 	&& apt autoremove --purge \
 	&& apt autoclean \
