--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -72,6 +72,7 @@ RUN apt update \
 		fonts-liberation \
 		# fonts-noto \
 		fonts-noto-cjk \
+		fonts-noto-core \
 		git-restore-mtime \
 		gtk2-engines-pixbuf \
 		libappindicator3-1 \
