--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -93,11 +93,7 @@ RUN apt update \
 		xvfb \
 	&& apt autoremove --purge \
 	&& apt autoclean \
-	&& rm -rf /var/lib/apt/lists/* \
-	# Install AWS CLI
-	&& curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
-	&& unzip awscliv2.zip \
-	&& sudo ./aws/install
+	&& rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT [ "/bin/bash" ]
 
