--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -115,7 +115,7 @@
 /packages/languages @Automattic/i18n
 
 # E2E specs
-/test/e2e @WunderBart @Automattic/kitkat @worldomonation
+/test/e2e @Automattic/kitkat @worldomonation
 /packages/calypso-e2e @Automattic/kitkat @worldomonation
 
 # Node updates
