--- a/package.json
+++ b/package.json
@@ -293,7 +293,8 @@
 		"@automattic/newspack-blocks/swiper@4.5.1": "patch:swiper@4.5.1#.patches/swiper@4.5.1.diff",
 		"@automattic/newspack-blocks/prettier": "npm:wp-prettier@2.6.2-beta-1",
 		"@types/react": "^17.0.39",
-		"keytar@npm:7.7.0/node-addon-api": "3.1.0"
+		"keytar@npm:7.7.0/node-addon-api": "3.1.0",
+		"lzma-native": "^8.0.5"
 	},
 	"packageManager": "yarn@3.2.3",
 	"dependenciesMeta": {
