Add stylis-rtl and set up emotion cache

--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
 		"@automattic/webpack-inline-constant-exports-plugin": "workspace:^",
 		"@automattic/wpcom-checkout": "workspace:^",
 		"@babel/core": "^7.17.5",
+		"@emotion/cache": "^11.10.3",
 		"@emotion/css": "^11.9.0",
 		"@emotion/jest": "^11.5.0",
 		"@emotion/react": "^11.4.1",
@@ -191,6 +192,7 @@
 		"source-map-support": "^0.5.19",
 		"store": "^2.0.12",
 		"striptags": "^3.1.1",
+		"stylis-plugin-rtl": "^2.1.1",
 		"superagent": "^3.8.3",
 		"supertest": "^6.1.6",
 		"textarea-caret": "^3.1.0",
