--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -219,6 +219,8 @@ packageExtensions:
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
 
 preferAggregateCacheInfo: true
 
