Update peer dependency resolutions

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -107,6 +107,10 @@ packageExtensions:
   "@signal-noise/stylelint-scales@2.0.3":
     peerDependencies:
       postcss: "*"
+  "@types/wordpress__block-editor@7.0.0":
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
   "@types/wordpress__block-editor@6.0.5":
     peerDependencies:
       react: "*"
@@ -114,10 +118,13 @@ packageExtensions:
   "@types/wordpress__blocks@6.4.12":
     peerDependencies:
       react: "*"
+  "@types/wordpress__components@19.10.3":
+    peerDependencies:
+      react: "*"
   "@types/wordpress__components@14.0.10":
     peerDependencies:
       react: "*"
-  "@types/wordpress__editor@10.0.1":
+  "@types/wordpress__editor@11.0.0":
     peerDependencies:
       react: "*"
       react-dom: "*"
@@ -128,13 +135,13 @@ packageExtensions:
   "@types/wordpress__plugins@3.0.0":
     peerDependencies:
       react: "*"
-  "@wordpress/block-library@6.0.18":
+  "@wordpress/block-library@6.1.0":
     peerDependencies:
       react: "*"
       react-dom: "*"
       reakit-utils: "*"
       redux: "*"
-  "@wordpress/components@12.0.8":
+  "@wordpress/components@12.0.9":
     peerDependencies:
       "@wordpress/data": "*"
       react: "*"
@@ -146,7 +153,7 @@ packageExtensions:
   "@wordpress/data@4.27.3":
     peerDependencies:
       react: "*"
-  "@wordpress/edit-post@5.0.20":
+  "@wordpress/edit-post@5.1.0":
     peerDependencies:
       react: "*"
       react-dom: "*"
@@ -155,7 +162,7 @@ packageExtensions:
   "@wordpress/rich-text@3.25.3":
     peerDependencies:
       react: "*"
-  "@wordpress/stylelint-config@20.0.3":
+  "@wordpress/stylelint-config@21.3.0":
     peerDependencies:
       postcss: "*"
   "@wp-g2/components@0.0.140":
