--- a/packages/data-stores/package.json
+++ b/packages/data-stores/package.json
@@ -34,6 +34,7 @@
 		"@automattic/domain-utils": "workspace:^",
 		"@automattic/format-currency": "workspace:^",
 		"@automattic/happychat-connection": "workspace:^",
+		"@automattic/shopping-cart": "workspace:^",
 		"@wordpress/api-fetch": "^6.6.0",
 		"@wordpress/data-controls": "^2.9.0",
 		"@wordpress/deprecated": "^3.9.0",
