--- a/packages/data-stores/package.json
+++ b/packages/data-stores/package.json
@@ -50,7 +50,8 @@
 	},
 	"peerDependencies": {
 		"@wordpress/data": "^6",
-		"react": "^17.0.2"
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
 	},
 	"devDependencies": {
 		"@automattic/calypso-typescript-config": "workspace:^",
