--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
 		"@automattic/color-studio": "2.5.0",
 		"@automattic/components": "workspace:^",
 		"@automattic/data-stores": "workspace:^",
+		"@automattic/design-carousel": "workspace:^",
 		"@automattic/happychat-connection": "workspace:^",
 		"@automattic/help-center": "workspace:^",
 		"@automattic/i18n-utils": "workspace:^",
