--- a/.github/workflows/sentry-release.yml
+++ b/.github/workflows/sentry-release.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - 'trunk'
+
+permissions:
+  contents: read  #  to fetch code (actions/checkout)
+
 jobs:
   create-release:
     runs-on: ubuntu-latest
