Add reference to ts project

--- a/packages/data-stores/tsconfig.json
+++ b/packages/data-stores/tsconfig.json
@@ -10,6 +10,7 @@
 	"references": [
 		{ "path": "../i18n-utils" },
 		{ "path": "../domain-utils" },
+		{ "path": "../shopping-cart" },
 		{ "path": "../format-currency" }
 	]
 }
