--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -18,6 +18,7 @@
 		{ "path": "./composite-checkout" },
 		{ "path": "./create-calypso-config" },
 		{ "path": "./data-stores" },
+		{ "path": "./design-carousel" },
 		{ "path": "./design-picker" },
 		{ "path": "./domain-picker" },
 		{ "path": "./explat-client-react-helpers" },
