Jetpack Logo Generator: add rough PoC for image generation (#85912)
* add rough PoC for image generation

* code rearrange

* add tracks on image generation request

* use constants for event names

--- a/packages/jetpack-ai-calypso/package.json
+++ b/packages/jetpack-ai-calypso/package.json
@@ -64,6 +64,8 @@
 		}
 	},
 	"dependencies": {
-		"classnames": "^2.3.2"
+		"@automattic/calypso-analytics": "workspace:^",
+		"classnames": "^2.3.2",
+		"debug": "^4.3.4"
 	}
 }
