Add calypso-razorpay package (#85846)
Add calypso-razorpay package

---------

Co-authored-by: nbloomf <nathan.bloomfield@automattic.com>
Co-authored-by: Payton Swick <payton@foolord.com>

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
 		"@automattic/calypso-config": "workspace:^",
 		"@automattic/calypso-polyfills": "workspace:^",
 		"@automattic/calypso-products": "workspace:^",
+		"@automattic/calypso-razorpay": "workspace:^",
 		"@automattic/calypso-router": "workspace:^",
 		"@automattic/calypso-sentry": "workspace:^",
 		"@automattic/calypso-stripe": "workspace:^",
