tsconfig.json updates

--- a/packages/plans-grid-next/tsconfig.json
+++ b/packages/plans-grid-next/tsconfig.json
@@ -3,15 +3,11 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": false,
-		"outDir": "dist/esm",
 		"declarationDir": "dist/types",
+		"outDir": "dist/esm",
 		"rootDir": "src"
 	},
 	"include": [ "src" ],
-	"exclude": [ "**/docs/*", "**/test/*" ],
-	"references": [
-		{ "path": "../calypso-analytics" },
-		{ "path": "../calypso-url" },
-		{ "path": "../search" }
-	]
+	"exclude": [ "**/test/*" ],
+	"references": [ { "path": "../data-stores" }, { "path": "../onboarding" } ]
 }
