--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -43,6 +43,7 @@
 		{ "path": "./page-pattern-modal" },
 		{ "path": "./photon" },
 		{ "path": "./plans-grid" },
+		{ "path": "./plans-grid-next" },
 		{ "path": "./privacy-toolset" },
 		{ "path": "./request-external-access" },
 		{ "path": "./search" },
