--- a/packages/block-renderer/package.json
+++ b/packages/block-renderer/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@automattic/block-renderer",
 	"version": "1.0.0",
-	"description": "Render blocks on the client side",
+	"description": "Render blocks on the client side.",
 	"homepage": "https://github.com/Automattic/wp-calypso",
 	"license": "GPL-2.0-or-later",
 	"author": "Automattic Inc.",
