--- a/packages/global-styles/package.json
+++ b/packages/global-styles/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@automattic/global-styles",
 	"version": "1.0.0",
-	"description": "Wrap global-styles related components from Gutenberg",
+	"description": "Wrap global-styles related components from Gutenberg.",
 	"homepage": "https://github.com/Automattic/wp-calypso",
 	"license": "GPL-2.0-or-later",
 	"author": "Automattic Inc.",
