--- a/packages/jetpack-ai-calypso/package.json
+++ b/packages/jetpack-ai-calypso/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@automattic/jetpack-ai-calypso",
 	"version": "1.0.0",
-	"description": "Jetpack AI utilities available to Calypso",
+	"description": "Jetpack AI utilities available to Calypso.",
 	"calypso:src": "src/index.js",
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
