--- a/packages/launchpad/package.json
+++ b/packages/launchpad/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@automattic/launchpad",
 	"version": "1.0.0",
-	"description": "Launchpad components",
+	"description": "Launchpad components.",
 	"homepage": "https://github.com/Automattic/wp-calypso",
 	"license": "GPL-2.0-or-later",
 	"author": "Automattic Inc.",
