--- a/packages/subscriber/package.json
+++ b/packages/subscriber/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@automattic/subscriber",
 	"version": "0.0.1",
-	"description": "Subscriber importer",
+	"description": "Subscriber importer.",
 	"homepage": "https://github.com/Automattic/wp-calypso",
 	"license": "GPL-2.0-or-later",
 	"author": "Automattic Inc.",
