--- a/packages/wpcom-template-parts/package.json
+++ b/packages/wpcom-template-parts/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@automattic/wpcom-template-parts",
 	"version": "1.0.0",
-	"description": "WordPress.com template parts to be used everywhere",
+	"description": "WordPress.com template parts to be used everywhere.",
 	"homepage": "https://github.com/Automattic/wp-calypso",
 	"license": "GPL-2.0-or-later",
 	"author": "Automattic Inc.",
