--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
 		"@automattic/calypso-razorpay": "workspace:^",
 		"@automattic/calypso-router": "workspace:^",
 		"@automattic/color-studio": "2.5.0",
+		"@automattic/command-palette": "workspace:^",
 		"@automattic/components": "workspace:^",
 		"@automattic/data-stores": "workspace:^",
 		"@automattic/design-carousel": "workspace:^",
@@ -152,6 +153,7 @@
 		"@automattic/launchpad": "workspace:^",
 		"@automattic/plans-grid-next": "workspace:^",
 		"@automattic/privacy-toolset": "workspace:^",
+		"@automattic/sites": "workspace:^",
 		"@automattic/typography": "workspace:^",
 		"@automattic/verbum-block-editor": "workspace:^",
 		"@automattic/viewport": "workspace:^",
