--- a/packages/command-palette/package.json
+++ b/packages/command-palette/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
 	"types": "dist/types/index.d.ts",
-	"calypso:src": "index.ts",
+	"calypso:src": "src/index.tsx",
 	"sideEffects": [
 		"*.css",
 		"*.scss"
