Jetpack Manage: Add url-only site creation from a CSV file (#87384)
* Jetpack Manage: Add a CSV-file-powered url-only site creation flow 

---------

Co-authored-by: Heyde Moura <moura.heyde@gmail.com>

--- a/client/package.json
+++ b/client/package.json
@@ -119,6 +119,7 @@
 		"core-js-bundle": "^3.6.4",
 		"cpf_cnpj": "^0.2.0",
 		"creditcards": "^3.1.0",
+		"csv-parse": "^5.1.0",
 		"d3-array": "^2.4.0",
 		"d3-axis": "^1.0.12",
 		"d3-scale": "^3.2.1",
