Add storybook for comparison grid

--- a/packages/plans-grid-next/package.json
+++ b/packages/plans-grid-next/package.json
@@ -35,6 +35,7 @@
 		"storybook": "sb dev"
 	},
 	"dependencies": {
+		"@automattic/calypso-config": "workspace:^",
 		"@automattic/calypso-products": "workspace:^",
 		"@automattic/components": "workspace:^",
 		"@automattic/data-stores": "workspace:^",
