Add new pages structure

--- a/packages/help-center/src/tailored-post-ids-mapping.json
+++ b/packages/help-center/src/tailored-post-ids-mapping.json
@@ -34,11 +34,17 @@
 	"/posts/trashed": [
 		{ "locale": "en", "post_ids": [ 100846, 193593, 176675, 5182, 82 ], "blog_id": 9619154 }
 	],
+	"/post/": [
+		{ "locale": "en", "post_ids": [ 147594, 193416, 193554, 167011, 176675 ], "blog_id": 9619154 }
+	],
 	"/posts/": [
 		{ "locale": "en", "post_ids": [ 100846, 84, 176675, 191604, 82 ], "blog_id": 9619154 }
 	],
 	"/posts": [
 		{ "locale": "en", "post_ids": [ 100846, 84, 176675, 191604, 82 ], "blog_id": 9619154 }
+	],
+	"/page/": [
+		{ "locale": "en", "post_ids": [ 147594, 193416, 193554, 167011, 193903 ], "blog_id": 9619154 }
 	],
 	"/pages/drafts": [
 		{ "locale": "en", "post_ids": [ 86, 1668, 163330, 14812, 189860 ], "blog_id": 9619154 }
